fix: changed positioning to upwards, so it does not overlap with the suggestions

--- a/src/app/components/form-group/form-group.scss
+++ b/src/app/components/form-group/form-group.scss
@@ -41,7 +41,7 @@
 
 .error-message {
 	position: absolute;
-	top: calc(100% + 0.25rem);
+	bottom: calc(100% + 0.25rem);
 	left: 0;
 	right: 0;
 	margin: 0 auto;
